--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
-    "build": "next build && next out",
+    "build": "next build && next export",
     "start": "next start"
   },
   "keywords": [],
