--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
-    "build": "next build",
-    "start": "node server.js"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@shopify/koa-shopify-auth": "^3.1.61",
     "dotenv": "^8.2.0",
-    "isomorphic-fetch": "^2.2.1",
-    "koa": "^2.11.0",
-    "koa-session": "^6.0.0",
     "next": "^9.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
