add linting, use css vars and context for theming, add styled components,  save theme preference to local storage

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shopify-test",
+  "name": "shopify-exp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Example nextjs application with styled-components and theming and some shopify storefront api integration through apollo",
   "main": "index.js",
   "scripts": {
     "test": "",
@@ -25,10 +25,26 @@
     "next": "^9.3.6",
     "next-with-apollo": "^5.0.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.34",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "husky": "^4.2.5",
+    "prettier": "2.0.5",
+    "pretty-quick": "^2.0.1",
     "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm test"
+    }
   }
 }
